--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -1,6 +1,9 @@
 {% load cms_tags staticfiles%}
 				<div class="topbar">
 					<ul class="loginbar pull-right">
+						<li>{% placeholder 'English Link' %}</li>
+						<i class="fa fa-globe fa-lg " aria-hidden="true" ></i>
+						<li class="topbar-devider"></li>
 						<li><a href="/aboutus">HAKKIMIZDA</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/contact">İLETİŞİM</a></li>
