--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -83,7 +83,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BALKAN TURLARI - </span>Ayrıntılar</a></p>
+				<p><a href="/balkan-tours" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BALKAN TURLARI - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kotor.jpg"%}" alt="thumb">
 		</div>
@@ -100,7 +100,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="10" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bs-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">GÜNÜ BİRLİK TURLAR - </span>Ayrıntılar</a></p>
+				<p><a href="/bosnia-tours/dailytours" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">GÜNÜ BİRLİK TURLAR - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/travnik.jpg"%}" alt="thumb">
 		</div>
@@ -117,7 +117,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/km-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ALTERNATİF TURLAR - </span>Ayrıntılar</a></p>
+				<p><a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ALTERNATİF TURLAR - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/rafting2.jpg"%}" alt="thumb">
 		</div>
@@ -134,7 +134,7 @@
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bkkm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ARAÇ KİRALAMA - </span>Ayrıntılar</a></p>
+				<p><a href="/rentacar" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ARAÇ KİRALAMA - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/rentacar.jpg"%}" alt="thumb">
 		</div>
